syntax = "proto3";

package redpanda.api.console.v1alpha;

import "buf/validate/validate.proto";
import "redpanda/api/console/v1alpha/common.proto";

// PublishMessageRequest is the request for PublishMessage call.
message PublishMessageRequest {
  string topic = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ]; // The topics to publish to.
  int32 partition_id = 2 [(buf.validate.field).int32 = {gte: -1}]; // -1 for all partition ids
  CompressionType compression = 3; // The compression to be used.
  bool use_transactions = 4; // Use transactions.
  repeated KafkaRecordHeader headers = 5; // Kafka record headers.
  PublishMessagePayloadOptions key = 6;
  PublishMessagePayloadOptions value = 7;
}

message PublishMessagePayloadOptions {
  PayloadEncoding encoding = 1; // Payload encoding to use.
  string data = 2; // Data.
  optional int32 schema_id = 9; // Optional schema ID.
  optional int32 index = 10; // Optional index. Useful for Protobuf messages.
}

// PublishMessageResponse is the response for PublishMessage call.
message PublishMessageResponse {
  string topic = 1;
  int32 partition_id = 2;
  int64 offset = 3;
}
